# ShrinkMyTesla

./: .gitignore  CHANGELOG.md  LICENSE  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  shrink_my_tesla_cli.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-main.yml  ci-pr.yml  e2e.yml  main.yml  pr.yml  release.yml
renderer/: renderer.js
src/: shrink_my_tesla_cli.py
src/shrinkmytesla/: __init__.py  processing.py
src/shrinkmytesla.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_e2e.py  test_processing.py
ui/: package.json
ui/electron/: main.js  preload.js
ui/renderer/: index.html  styles.css
