[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shrinkmytesla"
version = "1.0.0"
description = "TeslaCam video shrinker"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["tqdm"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
